--- a/menu.css
+++ b/menu.css
@@ -1,17 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
-    width: 100%;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-    overflow-x: hidden;
+  height: 100vh;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  overflow-x: hidden;
+}
+
+.navbar {
+  height: 50px;
+  width: 100%;
+  backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0px;
+}
+
+.navbar i {
+  color: #ffbc0d;
+  padding: 5px;
+  font-size: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 99;
+  cursor: pointer;
+}
+
+h1 {
+  margin: 50px;
+  text-align: center;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 100px 200px;
+  height: 100%;
+  flex-wrap: wrap;
+}
+
+.breakFast,
+.ChickenFish,
+.Wraps,
+.HappyMeal,
+.Desserts,
+.Beverages {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 50 180px;
+  height: 100%;
+}
+
+.break {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  height: 300px;
+  width: 250px;
+  margin: 10px;
+  /* border: 0.7px solid rgba(0, 187, 255, 0.546); */
+  border-radius: 0px 0px 6px 6px;
+}
+
+.break button {
+  background-color: #ffbc0d;
+  border: none;
+  text-align: center;
+  border-radius: 3px;
+  padding: 10px 24px;
+  font-size: 17px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.break button:hover {
+  background-color: #ffbf00;
 }
