--- a/menu.css
+++ b/menu.css
@@ -15,6 +15,59 @@ body {
   overflow-x: hidden;
 }
 
+/* cart */
+
+.cart {
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  height: 100%;
+  width: 220px;
+  padding: 10px;
+  z-index: 999;
+}
+
+.cart .closebtn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 99;
+  height: 100%;
+  width: 220px;
+  background-color: rgb(253, 253, 190);
+  transition: all 1s ease;
+  transform: translateX(0%);
+}
+
+.closebtn .btn {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: 999;
+  width: 50px;
+}
+
+.closebtn .btn {
+  top: 10px;
+  color: #ffbc0d;
+  background-color: rgba(255, 255, 255, 0.89);
+  border: 2px solid #ffbc0d;
+  border-radius: 4px;
+  padding: 5px 0px;
+  font-size: 18px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 99;
+  cursor: pointer;
+}
+
+.closebtn.show {
+  transform: translateX(70%);
+}
+
+/* cart end */
+
 .navbar {
   height: 50px;
   width: 100%;
@@ -23,29 +76,18 @@ body {
   top: 0px;
 }
 
-.navbar i {
-  color: #ffbc0d;
-  padding: 5px;
-  font-size: 20px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 99;
-  cursor: pointer;
-}
-
 h1 {
   margin: 50px;
   text-align: center;
 }
 
 .menu {
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 100px 200px;
-  height: 100%;
   flex-wrap: wrap;
+  margin: 50px 150px;
 }
 
 .breakFast,
@@ -58,9 +100,7 @@ h1 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  margin: 50 180px;
-  height: 100%;
+  gap: 50px;
 }
 
 .break {
@@ -69,11 +109,19 @@ h1 {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  height: 300px;
-  width: 250px;
-  margin: 10px;
-  /* border: 0.7px solid rgba(0, 187, 255, 0.546); */
+  height: auto;
+  width: 178px;
+  margin: 20px;
   border-radius: 0px 0px 6px 6px;
+}
+
+.break img {
+  height: 178px;
+  width: 178px;
+}
+
+.break h4 {
+  text-align: center;
 }
 
 .break button {
